# CodeLens

./: .env_template  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  example.py  linting_requirements.txt  pyproject.toml  requirements.txt  testing.py
codelens_backend/: __init__.py  manage.py
codelens_backend/codelens_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
codelens_backend/dev/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
codelens_backend/python_formater/: __init__.py  validation.py
codelens_backend/static/dev/css/aboutpage/: styles.css
codelens_backend/static/dev/css/mainpage/: styles.css
codelens_backend/static/dev/js/mainpage/: script.js
codelens_backend/templates/dev/: base.html  test-tesseract.html
codelens_backend/templates/dev/aboutpage/: index.html
codelens_backend/templates/dev/mainpage/: index.html
codelens_backend/tesseract/: __init__.py  api_usage.py  testing.py
codelens_backend/utils/: __init__.py  example.py  file_management.py
frontend/: index.html
frontend/aboutpage/: about.html  script.js  styles.css
frontend/css/: styles.css
frontend/js/: script.js
frontend/mainpage/: index.html  styles.css
nginx/: nginx.conf
python_formater/: validation.py
tesseract/: api_usage.py
tesseract_code/: api_usage.py
